# waive-front-v2

./: .gitignore  .gitmodules  CMakeLists.txt  CinderTheme_8cpp.html  CinderTheme_8cpp.js  Color_8cpp.html  Color_8cpp.js  DataCategory_8hpp.html  DataCategory_8hpp.js  DataCategory_8hpp_source.html  DataItem_8hpp.html  DataItem_8hpp.js  DataItem_8hpp_source.html  DataSource_8cpp.html  DataSource_8hpp.html  DataSource_8hpp.js  DataSource_8hpp_source.html  DataSources_8cpp.html  DataSources_8hpp.html  DataSources_8hpp.js  DataSources_8hpp_source.html  DataTag_8hpp.html  DataTag_8hpp.js  DataTag_8hpp_source.html  DistrhoPluginInfo_8h.html  DistrhoPluginInfo_8h.js  DistrhoPluginInfo_8h_source.html  Doxyfile  FrameData_8h.html  FrameData_8h.js  FrameData_8h_source.html  Logger_8cpp.html  Logger_8cpp.js  Makefile  OSCMessage_8hpp.html  OSCMessage_8hpp.js  OSCMessage_8hpp_source.html  OSCServer_8cpp.html  OSCServer_8cpp.js  README.md  (+166 more)
assets/: Icon.icns  Info.plist  entitlements.plist
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_7.js  defines_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+49 more)
src/: DistrhoPluginInfo.h  Global.h  ViewerWidget.cpp  ViewerWindow.cpp  WaiveFrontPlugin.cpp  WaiveFrontPluginUI.cpp
src/assets/fonts/: SpaceMono_Regular.cpp
src/assets/shaders/: common.glsl  main.frag  main.vert
src/assets/themes/: CinderTheme.cpp
src/data/: DataCategory.hpp  DataItem.hpp  DataSource.cpp  DataSource.hpp  DataSources.cpp  DataSources.hpp  DataTag.hpp
src/osc/: OSCMessage.hpp  OSCServer.cpp
src/shader/: ShaderProgram.cpp  ShaderRectangle.h  ShaderSource.cpp  ShaderTexture.cpp  ShaderUniform.h  ShaderUniforms.h
src/shaders/: main.frag  main.vert
src/themes/: CinderTheme.cpp
src/util/: Color.cpp  Logger.cpp
src/video/: VideoFrameDescription.h  VideoLoader.cpp
src/viewer/: FrameData.h  ViewerWidget.cpp  ViewerWindow.cpp
